test/sema/typeck/mutating/call-trait-mutating-on-assoc-type-immutable.dora
trait Movable {
    mutating fn move_by(dx: Int32);
}

trait Container {
    type Item: Movable;
}

fn move_it[T: Container](value: T::Item) {
    value.move_by(10i32);
}
